--- a/看板.md
+++ b/看板.md
@@ -1,12 +1,3 @@
 # room
-1. /admin/room ：实现管理（具体来说，是能够看到列表，按时间排序，然后可以点击右侧展开。不过这个功能目前权重很低，实现一个最精简mvp即可。）
-2. 右侧“实时捕捉屏幕”，可以随时快捷键截图（快照），可以启动图片分析工作流（比如惨剧轮回，自动识别当前回合状态，更新上下文）
-3. 添加模型切换（flash与3），添加“思考中”与“输出中”
-4. AI画板（不只是编辑笔记区，可以画图以阐述复杂信息）：你在地图上圈出一块地，AI 识别位置并生成：“指挥官标记了该区域，建议在此处建立分基地。
-5. Heckler（吐槽役）
-6. 游戏模式切换（自动提供游戏上下文）
-# 藏宝阁
-1. AI自动句子美化：如果完全hack了意思，自动替换美化后的句子（保留原句，如果不满意，下次创建新帖子时，看见了可以取消），如果有疑问，则保留原句，下面跟着问题
-# /log
-1. OS化改造：中间是可以执行function call的AI对话，右侧是计时器，左侧是“日记”，随手记录开发bug，阅读游玩心情等，午夜2点自动调用lLLM生成日志
-旨在解决两个痛点：1.这1周的开发总是遇到同一个bug，每次遇到都束手无策，思维混乱的感觉，又不知道往哪里记录。自己随收记录，ai帮我整理好（似乎还可以加上rag，方便低心智负担的记录经验） 2.LLM这么好用，让它成为系统的中枢
+## bug
+## feat
